small changes in trucks edit

--- a/client/views/partials/trucks-edit.html
+++ b/client/views/partials/trucks-edit.html
@@ -8,18 +8,16 @@
             <div class="col-xs-6 account-edit">
                 <h2 class="login-heading">{{pageTitle}}</h2>
                     <div class="form-group">
-                        <label>registrationNo</label>
+                        <label>Registration No</label>
                         <input type="text" class="form-control" ng-model="truck.registrationNo" placeholder="Registration No"/>
                     </div>
                     <div class="form-group">
                         <label>Truck Type</label>
-                        <input type="text" class="form-control" ng-model="truck.truckType"
-                               placeholder="Truck Type"/>
+                        <input type="text" class="form-control" ng-model="truck.truckType" placeholder="Truck Type"/>
                     </div>
                     <div class="form-group">
                         <label>Modal and Year</label>
-                        <input type="text" class="form-control" ng-model="truck.modelAndYear"
-                               placeholder="Modal and Year"/>
+                        <input type="text" class="form-control" ng-model="truck.modelAndYear" placeholder="Modal and Year"/>
                     </div>
                     <div class="form-group">
                         <label>Fitness Expiry</label>
