--- a/client/views/partials/accounts/edit-account.html
+++ b/client/views/partials/accounts/edit-account.html
@@ -35,9 +35,13 @@
                     <div class="form-group">
                         <label for="contact">Contact Number</label>
                         <input ng-model="account.contact" type="text" class="form-control" id="contact"
-
                                placeholder="Contact Number">
                     </div>
+
+                    <div class="checkbox">
+                        <label><input type="checkbox" ng-model="account.isActive">Account status</label>
+                    </div>
+
                     <div>
                         <div>
                             <div class="alert alert-danger" role="alert" ng-show="account.error">
