adds license number while adding driver

--- a/client/views/partials/trucks-list.html
+++ b/client/views/partials/trucks-list.html
@@ -7,7 +7,7 @@
         <div class="main-right col-xs-9">
 
             <h3>Trucks List</h3>
-            <button class="btn btn-success pull-right" ng-click="goToEditTrucksPage()">Add Truck</button>
+            <button class="btn btn-success pull-right" ng-click="goToEditTruckPage()">Add Truck</button>
 
             <div class="margin-top-40">
                 <div class="grid" ui-grid="truckGridOptions" ></div>
