--- a/client/views/partials/trucks-edit.html
+++ b/client/views/partials/trucks-edit.html
@@ -49,9 +49,8 @@
                             <strong>{{truck.success}}</strong>
                         </div>
                          <input type="button" value="Submit" class="btn btn-primary" ng-click="addOrUpdateTruck()"/>
-                        <input type="button" value="Cancel" class="btn btn-primary" ng-click="cancel()"/>
+                        <input type="button" value="Cancel" class="btn btn-primary" ng-click="goToRolesPage()"/>
                     </div>
-
             </div>
         </div>
     </div>
