Adds isActive status for users

--- a/client/views/partials/drivers/edit-driver.html
+++ b/client/views/partials/drivers/edit-driver.html
@@ -39,7 +39,7 @@
 
                     <div class="form-group">
                         <label for="licenseNumber">License Number</label>
-                        <input ng-model="driver.licenseNumber" type="text" class="form-control" id="licenseNumber" placeholder="Salary">
+                        <input ng-model="driver.licenseNumber" type="text" class="form-control" id="licenseNumber" placeholder="License Number">
                     </div>
 
                     <div>
