--- a/client/views/partials/users/usersEdit.html
+++ b/client/views/partials/users/usersEdit.html
@@ -8,13 +8,13 @@
                 <h2 class="login-heading">Add User</h2>
                 <form class="margin-top-20">
                     <!--<div class="form-group">-->
-                        <!--<label for="accountId">Account Id</label>-->
-                        <!--&lt;!&ndash;<input ng-model="userDetails.accountId" type="text" class="form-control" id="accountId"&ndash;&gt;-->
-                               <!--&lt;!&ndash;placeholder="Account Id">&ndash;&gt;-->
-                        <!--<select class="form-control" id="accountId" ng-model="userDetails.accountId">-->
-                            <!--<option value="">Select an Account</option>-->
-                            <!--<option ng-repeat="acc in accountIds">{{acc.name}}</option>-->
-                        <!--</select>-->
+                    <!--<label for="accountId">Account Id</label>-->
+                    <!--&lt;!&ndash;<input ng-model="userDetails.accountId" type="text" class="form-control" id="accountId"&ndash;&gt;-->
+                    <!--&lt;!&ndash;placeholder="Account Id">&ndash;&gt;-->
+                    <!--<select class="form-control" id="accountId" ng-model="userDetails.accountId">-->
+                    <!--<option value="">Select an Account</option>-->
+                    <!--<option ng-repeat="acc in accountIds">{{acc.name}}</option>-->
+                    <!--</select>-->
                     <!--</div>-->
                     <div class="form-group">
                         <label for="firstName">First Name</label>
@@ -47,6 +47,12 @@
                         <label for="password">Password</label>
                         <input ng-model="userDetails.password" type="password" class="form-control" id="password"
                                placeholder="password">
+                    </div>
+
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox" ng-model="userDetails.status"> User Status
+                        </label>
                     </div>
 
                     <div>
