Fixes issues in maintainence page except for accountId in table

--- a/client/views/partials/Maintenance/maintenance.html
+++ b/client/views/partials/Maintenance/maintenance.html
@@ -5,7 +5,7 @@
         </div>
         <div class="main-right col-xs-9" ng-controller="MaintenanceCtrl">
             <h3>Maintenance Cost</h3>
-            <button class="btn btn-success pull-right" ng-click="goToEditMaintenancePage()">Add Role</button>
+            <button class="btn btn-success pull-right" ng-click="goToEditMaintenancePage()">Add Maintenance</button>
 
             <div class="margin-top-40">
                 <div class="grid" ui-grid="maintenanceGridOptions" ui-grid-selection></div>
