--- a/client/views/partials/Maintenance/maintenanceEdit.html
+++ b/client/views/partials/Maintenance/maintenanceEdit.html
@@ -16,13 +16,13 @@
 
                     <div class="form-group">
                         <label for="description">Repair Description</label>
-                        <input ng-model="maintenanceDetails.repairType" type="text" class="form-control" id="description"
+                        <input ng-model="maintenanceDetails.description" type="text" class="form-control" id="description"
                                placeholder="Description">
                     </div>
 
                     <div class="form-group">
                         <label for="date">Date</label>
-                        <date-picker id="date" ng-model="expenseDate"></date-picker>
+                        <date-picker id="date" ng-model="maintenanceDetails.date"></date-picker>
                     </div>
 
                     <div class="form-group">
