UI Changes/Forms in all pages

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -11,10 +11,14 @@
     <link rel="stylesheet" type="text/css" href="components/angular-ui-grid/ui-grid.min.css">
     <link rel="stylesheet" type="text/css"
           href="components/angular-ui-notification/dist/angular-ui-notification.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Exo+2" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 
 <body ng-app="EasyGaadi">
+
+<left-nav-li name="Accounts" link="drivers"></left-nav-li>
+
 <nav class="navbar navbar-default menu-header" ng-controller="NavCtrl">
     <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
