--- a/client/views/partials/accounts/accountsList.html
+++ b/client/views/partials/accounts/accountsList.html
@@ -7,7 +7,7 @@
         <div class="main-right col-xs-9" ng-controller="ShowAccountsCtrl">
 
             <h3>Accounts</h3>
-            <button class="btn btn-success pull-right" ng-click="goToEditAccountPage()">Add Account</button>
+            <button class="btn  btn-blue pull-right" ng-click="goToEditAccountPage()">Add Account</button>
 
             <div class="margin-top-40">
                 <div class="grid" ui-grid="accountGridOptions" ></div>
