--- a/client/views/partials/roles/roles.html
+++ b/client/views/partials/roles/roles.html
@@ -6,7 +6,7 @@
         </div>
         <div class="main-right col-xs-9" ng-controller="RolesCtrl">
             <h3>Roles</h3>
-            <button class="btn btn-success pull-right" ng-click="goToEditRolePage()">Add Role</button>
+            <button class="btn  btn-blue pull-right" ng-click="goToEditRolePage()">Add Role</button>
 
             <div class="margin-top-40">
             <div class="grid" ui-grid="roleGridOptions"></div>
