--- a/client/views/partials/users/show-users.html
+++ b/client/views/partials/users/show-users.html
@@ -6,7 +6,7 @@
         </div>
         <div class="main-right col-xs-9" ng-controller="UserCtrl">
             <h3>Users</h3>
-            <button class="btn btn-success pull-right" ng-click="goToEditUserPage()">Add User</button>
+            <button class="btn  btn-blue pull-right" ng-click="goToEditUserPage()">Add User</button>
 
             <div class="margin-top-40">
                 <div class="grid" ui-grid="userGridOptions"></div>
