--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -1,7 +1,9 @@
 h1, h2, h3, h4, h5, h6 {
     margin: 0;
 }
-
+body{
+    font-family: 'Exo 2', sans-serif;
+}
 .pall-zero {
     padding: 0;
 }
@@ -19,7 +21,6 @@ h1, h2, h3, h4, h5, h6 {
 .menu-header .navbar-nav > li > a {
     padding: 8px 15px;
     background-image: none;
-    font-family: BebasRegular;
     font-size: 16px;
     text-transform: uppercase;
     border-right: 1px solid rgba(228, 228, 228, .5);
@@ -103,10 +104,47 @@ h1, h2, h3, h4, h5, h6 {
 .cursor-pointer {
     cursor: pointer;
 }
-
+.edit{
+    text-decoration: none;
+    padding-right: 10px;
+    font-size: 18px;
+    cursor: pointer;
+}
+.edit:hover{
+    text-decoration: none;
+    color: #d9534f;
+}
+.dele{
+    text-decoration: none;
+    padding-right: 10px;
+    font-size: 18px;
+    cursor: pointer;
+}
+.dele:hover{
+    text-decoration: none;
+    color: #d9534f;
+}
 .main-right {
     padding: 10px;
-
+}
+.btn-blue{
+    background-color: rgba(25, 149, 199, .6);
+    border-radius: 0;
+    color: #fff;
+    border: 1px solid rgba(25, 149, 199, .6);
+}
+.btn-blue:hover{
+    background-color: #d9534f;
+   border:1px solid #d9534f;
+    color: #fff;
+}
+.btn-blue:active, .btn-blue:focus{
+    background-color: #d9534f;
+    border:1px solid #d9534f;
+}
+.active{
+    background-color: #d9534f !important;
+    color: #fff !important;
 }
 .mt-10{
     margin-top: 30px;
@@ -119,6 +157,9 @@ h1, h2, h3, h4, h5, h6 {
     display: block;
     margin: 0 auto;
     float: none;
+}
+.main-right .form-control{
+    border-radius: 0px;
 }
 
 #ui-grid-twbs #ui-grid-twbs .form-horizontal .form-group:before,
@@ -268,6 +309,8 @@ h1, h2, h3, h4, h5, h6 {
 
 .ui-grid-header-cell-wrapper {
     position: relative;
+    text-align: center;
+    font-size: 13px;
     display: table;
     box-sizing: border-box;
     height: 100%;
@@ -514,6 +557,8 @@ select.ui-grid-filter-select:hover {
     position: relative;
     overflow-y: scroll;
     -webkit-overflow-scrolling: touch;
+    text-align: center;
+    vertical-align: middle;
 }
 
 .ui-grid-viewport:focus {
