--- a/client/views/partials/accounts/edit-account.html
+++ b/client/views/partials/accounts/edit-account.html
@@ -1,50 +1,55 @@
+<top-navigation></top-navigation>
 <div class="container-fluid" ng-controller="AddEditAccountCtrl">
     <div class="row pall-zero">
         <div class="col-xs-2 pall-zero">
             <left-navigation></left-navigation>
         </div>
         <div class="main-right col-xs-9">
-            <div class="col-xs-6 account-edit">
+            <div class="col-xs-12 account-edit">
                 <h2 class="login-heading">Add Account</h2>
                 <form ng-submit="addOrUpdateAccount()" class="mt-10">
-                    <div class="form-group col-xs-12">
-                        <label for="accountId" class="col-sm-4 pall-zero">Account Name</label>
-                        <div class="col-sm-8 col-xs-12">
-                            <input ng-model="account.name" ng-readonly="account._id" type="text" class="form-control"
-                                   id="accountId"
-                                   placeholder="Account Name">
+                    <div class="col-sm-6 col-xs-12">
+                        <div class="form-group col-xs-12">
+                            <label for="accountId" class="col-sm-4 pall-zero">Account Name</label>
+                            <div class="col-sm-8 col-xs-12">
+                                <input ng-model="account.name" ng-readonly="account._id" type="text"
+                                       class="form-control"
+                                       id="accountId"
+                                       placeholder="Account Name">
+                            </div>
+                        </div>
+
+                        <div class="form-group col-xs-12" ng-hide="account._id">
+                            <label for="userName" class="col-sm-4 pall-zero col-xs-12">User Name</label>
+                            <div class="col-xs-12 col-sm-8">
+                                <input ng-model="account.userName" type="text" class="form-control" id="userName"
+                                       placeholder="User name">
+                            </div>
+                        </div>
+
+                        <div class="form-group col-xs-12" ng-hide="account._id">
+                            <label for="password" class="col-sm-4 pall-zero col-xs-12">Password</label>
+                            <div class="col-xs-12 col-sm-8">
+                                <input ng-model="account.password" type="password" class="form-control" id="password"
+                                       placeholder="Password">
+                            </div>
                         </div>
                     </div>
-
-                    <div class="form-group col-xs-12" ng-hide="account._id">
-                        <label for="userName" class="col-sm-4 pall-zero col-xs-12">User Name</label>
-                        <div class="col-xs-12 col-sm-8">
-                            <input ng-model="account.userName" type="text" class="form-control" id="userName"
-                                   placeholder="User name">
+                    <div class="col-sm-6 col-xs-12">
+                        <div class="form-group col-xs-12">
+                            <label for="address" class="col-sm-4 pall-zero col-xs-12">Address</label>
+                            <div class="col-xs-12 col-sm-8">
+                                <input ng-model="account.address" type="text" class="form-control" id="address"
+                                       placeholder="Address">
+                            </div>
                         </div>
-                    </div>
 
-                    <div class="form-group col-xs-12" ng-hide="account._id">
-                        <label for="password" class="col-sm-4 pall-zero col-xs-12">Password</label>
-                        <div class="col-xs-12 col-sm-8">
-                            <input ng-model="account.password" type="password" class="form-control" id="password"
-                                   placeholder="Password">
-                        </div>
-                    </div>
-
-                    <div class="form-group col-xs-12">
-                        <label for="address" class="col-sm-4 pall-zero col-xs-12">Address</label>
-                        <div class="col-xs-12 col-sm-8">
-                            <input ng-model="account.address" type="text" class="form-control" id="address"
-                                   placeholder="Address">
-                        </div>
-                    </div>
-
-                    <div class="form-group col-xs-12">
-                        <label for="contact" class="col-sm-4 pall-zero col-xs-12">Contact Number</label>
-                        <div class="col-xs-12 col-sm-8">
-                            <input ng-model="account.contact" type="text" class="form-control" id="contact"
-                                   placeholder="Contact Number">
+                        <div class="form-group col-xs-12">
+                            <label for="contact" class="col-sm-4 pall-zero col-xs-12">Contact Number</label>
+                            <div class="col-xs-12 col-sm-8">
+                                <input ng-model="account.contact" type="text" class="form-control" id="contact"
+                                       placeholder="Contact Number">
+                            </div>
                         </div>
                     </div>
 
@@ -53,6 +58,7 @@
                     </div>
 
                     <div class="clearfix"></div>
+                    <div class="col-xs-4 col-xs-push-4""
                     <div>
                         <div class="alert alert-danger" role="alert" ng-show="account.error">
                             <strong>{{account.error}}</strong>
@@ -62,10 +68,11 @@
                             <strong>{{account.success}}</strong>
                         </div>
                     </div>
-                <div class="col-xs-6 col-xs-push-3">
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                    <input type="button" value="Cancel" class="btn btn-primary" ng-click="cancel()"/>
-                </div>
+                    <div>
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <input type="button" value="Cancel" class="btn btn-primary" ng-click="cancel()"/>
+                    </div>
+                </form>
                 </form>
             </div>
         </div>
