--- a/client/views/partials/drivers/driversList.html
+++ b/client/views/partials/drivers/driversList.html
@@ -9,7 +9,7 @@
             <h3>Drivers</h3>
 
             <div>
-                <button class="btn btn-success pull-right" ng-click="goToEditOrAddDriverPage()">Add Driver</button>
+                <button class="btn  btn-blue pull-right" ng-click="goToEditOrAddDriverPage()">Add Driver</button>
             </div>
 
             <div class="margin-top-40">
