--- a/client/views/partials/edit-party.html
+++ b/client/views/partials/edit-party.html
@@ -1,40 +1,58 @@
-
+<top-navigation></top-navigation>
 <div class="container-fluid" ng-controller="AddEditPartyCtrl">
     <div class="row pall-zero">
         <div class="col-xs-2 pall-zero">
             <left-navigation></left-navigation>
         </div>
         <div class="main-right col-xs-9">
-            <div class="col-xs-6 account-edit">
+            <div class="col-xs-12 account-edit">
                 <h2 class="login-heading">{{pageTitle}}</h2>
-                <form class="margin-top-20">
-                    <div class="form-group">
-                        <label for="accountId">Name</label>
-                        <input ng-model="party.name" type="text" class="form-control" id="accountId"
-                               placeholder="Party Name">
-                    </div>
+                <form class="mt-10">
+                    <div class="col-xs-12 col-sm-6">
+                        <div class="form-group col-xs-12">
+                            <label for="accountId" class="col-xs-12 col-sm-4 pall-zero">Name</label>
+                            <div class="col-xs-12 col-sm-8">
+                                <input ng-model="party.name" type="text" class="form-control" id="accountId"
+                                       placeholder="Party Name">
+                            </div>
+                        </div>
 
-                    <div class="form-group">
-                        <label for="contactPhone">Contact Phone</label>
-                        <input ng-model="party.contact" type="number" class="form-control" id="contactPhone"
-                               placeholder="Contact Phone">
-                    </div>
+                        <div class="form-group col-xs-12">
+                            <label for="contactPhone" class="col-xs-12 col-sm-4 pall-zero">Contact Phone</label>
+                            <div class="col-xs-12 col-sm-8">
+                                <input ng-model="party.contact" type="number" class="form-control" id="contactPhone"
+                                       placeholder="Contact Phone">
+                            </div>
+                        </div>
 
-                    <div class="form-group">
-                        <label for="contactEmail">Email</label>
-                        <input ng-model="party.email" type="email" class="form-control" id="contactEmail" placeholder="Email">
+                        <div class="form-group col-xs-12">
+                            <label for="contactEmail" class="col-xs-12 col-sm-4 pall-zero">Email</label>
+                            <div class="col-xs-12 col-sm-8">
+                                <input ng-model="party.email" type="email" class="form-control" id="contactEmail"
+                                       placeholder="Email">
+                            </div>
+                        </div>
                     </div>
+                    <div class="col-xs-12 col-sm-6">
 
-                    <div class="form-group">
-                        <label for="city">City</label>
-                        <input ng-model="party.city" type="text" class="form-control" id="city" placeholder="City">
-                    </div>
+                        <div class="form-group col-xs-12">
+                            <label for="city" class="col-xs-12 col-sm-4 pall-zero">City</label>
+                            <div class="col-xs-12 col-sm-8">
+                                <input ng-model="party.city" type="text" class="form-control" id="city"
+                                       placeholder="City">
+                            </div>
+                        </div>
 
-                    <div class="form-group">
-                        <label for="operatingLane">Operating Lane</label>
-                        <input ng-model="party.operatingLane" type="text" class="form-control" id="operatingLane" placeholder="Operating Lane">
+                        <div class="form-group col-xs-12">
+                            <label for="operatingLane" class="col-xs-12 col-sm-4 pall-zero">Operating Lane</label>
+                            <div class="col-xs-12 col-sm-8">
+                                <input ng-model="party.operatingLane" type="text" class="form-control"
+                                       id="operatingLane"
+                                       placeholder="Operating Lane"></div>
+                        </div>
                     </div>
-                    <div>
+                    <div class="clearfix"></div>
+                    <div class="col-xs-4 col-xs-push-4">
                         <div class="alert alert-danger" role="alert" ng-show="party.error">
                             <strong>{{party.error}}</strong>
                         </div>
@@ -45,7 +63,7 @@
                         <input type="button" value="Cancel" class="btn btn-primary" ng-click="cancel()"/>
                     </div>
                 </form>
-        </div>
+            </div>
         </div>
     </div>
 </div>
