--- a/client/views/partials/party-list.html
+++ b/client/views/partials/party-list.html
@@ -6,13 +6,13 @@
         </div>
         <div class="main-right col-xs-9">
             <h3>Party</h3>
-            <button class="btn btn-success pull-right" ng-click="goToEditPartyPage()">Add Party</button>
+            <button class="btn  btn-blue  pull-right" ng-click="goToEditPartyPage()">Add Party</button>
 
             <div class="margin-top-40">
-                <div class="grid" ui-grid="partyGridOptions" ui-grid-selection></div>
+                <div class="grid" ui-grid="partyGridOptions"></div>
             </div>
 
-            <ul uib-pagination total-items="totalItems" ng-model="pageNumber" max-size="maxSize" class="pagination-sm"
+            <ul uib-pagination total-items="totalItems" ng-model="pageNumber" max-size="maxSize" class="pagination-sm pull-right"
                 boundary-link-numbers="true" rotate="false" ng-change="getParties()"></ul>
         </div>
     </div>
