--- a/client/views/partials/trip-lane-edit.html
+++ b/client/views/partials/trip-lane-edit.html
@@ -1,4 +1,4 @@
-
+<top-navigation></top-navigation>
 <div class="container-fluid" ng-controller="AddEditTripLaneCtrl">
     <div class="row pall-zero">
         <div class="col-xs-2 pall-zero">
@@ -6,28 +6,37 @@
         </div>
         <div class="main-right col-xs-9">
             <div class="col-xs-6 account-edit">
-                <h2 class="login-heading">Add Trip</h2>
-                <form class="margin-top-20">
-                    <div class="form-group">
-                        <label for="name">Name</label>
-                        <input ng-model="tripLane.name" type="text" class="form-control" id="name"
-                               placeholder="Name">
+                <h2 class="login-heading">Add Trip Lane</h2>
+                <form class="mt-10">
+                    <div class="form-group col-xs-12">
+                        <label for="name" class="col-sm-4 col-xs-12 pall-zero">Name</label>
+                        <div class="col-sm-8 col-xs-12">
+                            <input ng-model="tripLane.name" type="text" class="form-control" id="name"
+                                   placeholder="Name">
+                        </div>
                     </div>
-                    <div class="form-group">
-                        <label for="from">From</label>
-                        <input ng-model="tripLane.from" type="text" class="form-control" id="from"
-                               placeholder="From">
+                    <div class="form-group col-xs-12">
+                        <label for="from" class="col-sm-4 col-xs-12 pall-zero">From</label>
+                        <div class="col-xs-12 col-sm-8">
+                            <input ng-model="tripLane.from" type="text" class="form-control" id="from"
+                                   placeholder="From">
+                        </div>
                     </div>
-                    <div class="form-group">
-                        <label for="to">To</label>
-                        <input ng-model="tripLane.to" type="text" class="form-control" id="to"
-                               placeholder="To">
+                    <div class="form-group col-xs-12">
+                        <label class="col-sm-4 col-xs-12 pall-zero">To</label>
+                        <div class="col-sm-8 col-xs-12">
+                            <input ng-model="tripLane.to" type="text" class="form-control" id="to"
+                                   placeholder="To">
+                        </div>
                     </div>
 
-                    <div class="form-group">
-                        <label for="estimatedDistance">Estimated Distance</label>
-                        <input ng-model="tripLane.estimatedDistance" type="number" class="form-control" id="estimatedDistance"
-                               placeholder="Estimated Distance">
+                    <div class="form-group col-xs-12">
+                        <label for="estimatedDistance" class="col-sm-4 col-xs-12 pall-zero">Estimated Distance</label>
+                        <div class="col-xs-12 col-sm-8">
+                            <input ng-model="tripLane.estimatedDistance" type="number" class="form-control"
+                                   id="estimatedDistance"
+                                   placeholder="Estimated Distance">
+                        </div>
                     </div>
 
                     <div>
@@ -41,9 +50,10 @@
                             </div>
                         </div>
                     </div>
-
+                    <div class="col-xs-6 col-xs-push-3">
                         <button type="submit" class="btn btn-primary" ng-click="addOrUpdateTripLane()">Submit</button>
-                        <input type="button" value="Cancel" class="btn btn-primary" ng-click="cancel()" />
+                        <input type="button" value="Cancel" class="btn btn-primary" ng-click="cancel()"/>
+                    </div>
                 </form>
             </div>
         </div>
