--- a/client/views/partials/trip-lane.html
+++ b/client/views/partials/trip-lane.html
@@ -7,13 +7,13 @@
         <div class="main-right col-xs-9" ng-controller="ShowTripLanesCtrl">
 
             <h3>Trip Lanes</h3>
-            <button class="btn btn-success pull-right" ng-click="goToEditTripLanePage()">Add Trip Lanes</button>
+            <button class="btn  btn-blue pull-right" ng-click="goToEditTripLanePage()">Add Trip Lanes</button>
 
             <div class="margin-top-40">
-                <div class="grid" ui-grid="tripLaneGridOptions" ui-grid-selection></div>
+                <div class="grid" ui-grid="tripLaneGridOptions"></div>
             </div>
 
-            <ul uib-pagination total-items="totalItems" ng-model="pageNumber" max-size="maxSize" class="pagination-sm"
+            <ul uib-pagination total-items="totalItems" ng-model="pageNumber" max-size="maxSize" class="pagination-sm pull-right"
                 boundary-link-numbers="true" rotate="false" ng-change="getTripLanesData()"></ul>
 
 
