--- a/client/views/partials/roles/roles-edit.html
+++ b/client/views/partials/roles/roles-edit.html
@@ -15,6 +15,7 @@
                                    placeholder="Role Name"/>
                         </div>
                     </div>
+                    <div class="clearfix"></div>
                     <div>
                         <div>
                             <div class="alert alert-danger" role="alert" ng-show="rolesDetails.error">
