--- a/client/views/partials/trucks-list.html
+++ b/client/views/partials/trucks-list.html
@@ -7,11 +7,7 @@
         <div class="main-right col-xs-9">
 
             <h3>Trucks List</h3>
-<<<<<<< 4d1b67b26d2995d45f3957d4cf1d00472e852cbf
-            <button class="btn btn-success pull-right" ng-click="goToEditTruckPage()">Add Truck</button>
-=======
-            <button class="btn btn-blue  pull-right" ng-click="goToEditTrucksPage()">Add Truck</button>
->>>>>>> UI Changes/Forms in all pages
+            <button class="btn btn-blue  pull-right" ng-click="goToEditTruckPage()">Add Truck</button>
 
             <div class="margin-top-40">
                 <div class="grid" ui-grid="truckGridOptions" ></div>
