--- a/client/views/partials/users/usersEdit.html
+++ b/client/views/partials/users/usersEdit.html
@@ -57,20 +57,19 @@
                                    placeholder="password">
                         </div>
                     </div>
-<<<<<<< 4d1b67b26d2995d45f3957d4cf1d00472e852cbf
-
+                    <div class="form-group col-xs-12">
                     <div class="checkbox">
                         <label>
                             <input type="checkbox" ng-model="userDetails.status"> User Status
                         </label>
                     </div>
+                    </div>
 
                     <div>
-=======
+                    </div>
                     </div>
                         <div class="clearfix"></div>
                     <div class="col-xs-4 col-xs-push-4">
->>>>>>> UI Changes/Forms in all pages
                         <div>
                             <div class="alert alert-danger" role="alert" ng-show="userDetails.error.length">
                                 <ul>
