--- a/client/views/partials/accounts/edit-account.html
+++ b/client/views/partials/accounts/edit-account.html
@@ -51,14 +51,16 @@
                                        placeholder="Contact Number">
                             </div>
                         </div>
-                    </div>
 
+                    <div class="form-group col-xs-12">
                     <div class="checkbox">
                         <label><input type="checkbox" ng-model="account.isActive">Account status</label>
                     </div>
-
+                    </div>
+                    </div>
                     <div class="clearfix"></div>
-                    <div class="col-xs-4 col-xs-push-4""
+                    <div class="col-xs-4 col-xs-push-4">
+
                     <div>
                         <div class="alert alert-danger" role="alert" ng-show="account.error">
                             <strong>{{account.error}}</strong>
@@ -68,9 +70,10 @@
                             <strong>{{account.success}}</strong>
                         </div>
                     </div>
-                    <div>
+
                         <button type="submit" class="btn btn-primary">Submit</button>
                         <input type="button" value="Cancel" class="btn btn-primary" ng-click="cancel()"/>
+                    </div>
                     </div>
                 </form>
                 </form>
