UI Changes in driver party and triplane pages

--- a/client/views/partials/trucks-edit.html
+++ b/client/views/partials/trucks-edit.html
@@ -62,13 +62,7 @@
                     <div class="form-group col-xs-12">
                         <label class="col-sm-4 pall-zero">Tax Due Date : </label>
                         <div class="col-sm-8 col-xs-12">
-                            <date-picker id="taxDueDate" ng-model="truck.taxDueDate"></date-picker>
-                        </div>
-<<<<<<< 06d0d9b4c69db553d92d65ee2abe13d86e104d5b
-                         <input type="button" value="Submit" class="btn btn-primary" ng-click="addOrUpdateTruck()"/>
-                        <input type="button" value="Cancel" class="btn btn-primary" ng-click="goToRolesPage()"/>
-                    </div>
-=======
+                            <date-picker id="taxDueDate" ng-model="truck.taxDueDate"></date-picker>                        </div>
                     </div>
                 </div>
                 <div class="clearfix"></div>
@@ -84,7 +78,6 @@
                     <input type="button" value="Cancel" class="btn btn-primary" ng-click="cancel()"/>
                 </div>
 
->>>>>>> trucks-edit UI Changed
             </div>
         </div>
     </div>
