--- a/client/views/partials/trips-edit.html
+++ b/client/views/partials/trips-edit.html
@@ -43,63 +43,73 @@
                                 </select>
                             </div>
                         </div>
+                        <div class="form-group col-xs-12">
 
-                        <div class="col-sm-6 col-xs-12">
-                            <div class="form-group col-xs-12">
-                                <label for="balance" class="col-xs-12 col-sm-4 pall-zero">Balance</label>
-                                <div class="col-sm-8 col-xs-12">
-                                    <input ng-model="trip.balance" type="number" class="form-control" id="balance"
-                                           placeholder="Balance">
-                                </div>
+                            <label for="freightAmount" class="col-xs-12 col-sm-4 pall-zero">Freight Amount</label>
+                            <div class="col-sm-8 col-xs-12">
+                                <input ng-model="trip.freightAmount" type="number" class="form-control"
+                                       id="freightAmount"
+                                       placeholder="Freight Amount">
                             </div>
-
-                            <div class="form-group col-xs-12">
-                                <label for="tripLane" class="col-xs-12 col-sm-4 pall-zero">Trip Lane</label>
-                                <div class="col-sm-8 col-xs-12">
-                                    <select ng-model="trip.tripLane"
-                                            ng-options="tripLane._id as tripLane.name for tripLane in tripLanes"
-                                            type="text"
-                                            class="form-control" id="tripLane">
-                                    </select>
-                                </div>
-                            </div>
-
-                            <div class="form-group col-xs-12">
-                                <label for="advance" class="col-xs-12 col-sm-4 pall-zero">Advance</label>
-                                <div class="col-xs-12 col-sm-8">
-                                    <input ng-model="trip.advance" type="number" class="form-control" id="advance"
-                                           placeholder="Advance">
-                                </div>
-                            </div>
-
-                            <div class="form-group col-xs-12">
-                                <label for="tripExpenses" class="col-xs-12 col-sm-4 pall-zero">Trip Expenses</label>
-                                <div class="col-sm-8 col-xs-12">
-                                    <input ng-model="trip.tripExpenses" type="number" class="form-control"
-                                           id="tripExpenses"
-                                           placeholder="Trip Expenses">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="clearfix"></div>
-                        <div class="col-xs-4 col-xs-push-4 margin-top-20">
-                            <div class="hidden">
-                                <div class="alert alert-danger" role="alert" ng-show="trip.error">
-                                    <strong>{{trip.error}}</strong>
-                                </div>
-
-                                <div class="alert alert-success" role="alert" ng-show="trip.success">
-                                    <strong>{{trip.success}}</strong>
-                                </div>
-                            </div>
-                            <button type="submit" class="btn btn-primary" ng-click="addOrUpdateTrip()">Submit</button>
-                            <input type="button" value="Cancel" class="btn btn-primary" ng-click="cancel()"/>
                         </div>
                     </div>
-                </form>
+
+                    <div class="col-sm-6 col-xs-12">
+                        <div class="form-group col-xs-12">
+                            <label for="balance" class="col-xs-12 col-sm-4 pall-zero">Balance</label>
+                            <div class="col-sm-8 col-xs-12">
+                                <input ng-model="trip.balance" type="number" class="form-control" id="balance"
+                                       placeholder="Balance">
+                            </div>
+                        </div>
+
+                        <div class="form-group col-xs-12">
+                            <label for="tripLane" class="col-xs-12 col-sm-4 pall-zero">Trip Lane</label>
+                            <div class="col-sm-8 col-xs-12">
+                                <select ng-model="trip.tripLane"
+                                        ng-options="tripLane._id as tripLane.name for tripLane in tripLanes"
+                                        type="text"
+                                        class="form-control" id="tripLane">
+                                </select>
+                            </div>
+                        </div>
+
+                        <div class="form-group col-xs-12">
+                            <label for="advance" class="col-xs-12 col-sm-4 pall-zero">Advance</label>
+                            <div class="col-xs-12 col-sm-8">
+                                <input ng-model="trip.advance" type="number" class="form-control" id="advance"
+                                       placeholder="Advance">
+                            </div>
+                        </div>
+
+                        <div class="form-group col-xs-12">
+                            <label for="tripExpenses" class="col-xs-12 col-sm-4 pall-zero">Trip Expenses</label>
+                            <div class="col-sm-8 col-xs-12">
+                                <input ng-model="trip.tripExpenses" type="number" class="form-control"
+                                       id="tripExpenses"
+                                       placeholder="Trip Expenses">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="clearfix"></div>
+                    <div class="col-xs-4 col-xs-push-4 margin-top-20">
+                        <div class="hidden">
+                            <div class="alert alert-danger" role="alert" ng-show="trip.error">
+                                <strong>{{trip.error}}</strong>
+                            </div>
+
+                            <div class="alert alert-success" role="alert" ng-show="trip.success">
+                                <strong>{{trip.success}}</strong>
+                            </div>
+                        </div>
+                        <button type="submit" class="btn btn-primary" ng-click="addOrUpdateTrip()">Submit</button>
+                        <input type="button" value="Cancel" class="btn btn-primary" ng-click="cancel()"/>
+                    </div>
             </div>
+            </form>
         </div>
     </div>
+</div>
 </div>
 
 
