Fixes salary in add driver for android

--- a/client/views/partials/drivers/edit-driver.html
+++ b/client/views/partials/drivers/edit-driver.html
@@ -48,7 +48,7 @@
                     <div class="form-group col-xs-12">
                         <label for="salary" class="col-xs-12 col-sm-4 pall-zero">Salary</label>
                         <div class="col-xs-12 col-sm-8">
-                        <input ng-model="driver.salary.value" type="text" class="form-control" id="salary"
+                        <input ng-model="driver.salary" type="text" class="form-control" id="salary"
                                placeholder="Salary">
                         </div>
                     </div>
