small fixes in triplanes and parties

--- a/client/views/partials/trips-edit.html
+++ b/client/views/partials/trips-edit.html
@@ -93,7 +93,7 @@
                     </div>
                     <div class="clearfix"></div>
                     <div class="col-xs-4 col-xs-push-4 margin-top-20">
-                        <div class="hidden">
+                        <div>
                             <div class="alert alert-danger" role="alert" ng-show="trip.error">
                                 <strong>{{trip.error}}</strong>
                             </div>
