--- a/client/views/partials/trucks-edit.html
+++ b/client/views/partials/trucks-edit.html
@@ -75,7 +75,7 @@
                         <strong>{{truck.success}}</strong>
                     </div>
                     <input type="button" value="Submit" class="btn btn-primary" ng-click="addOrUpdateTruck()"/>
-                    <input type="button" value="Cancel" class="btn btn-primary" ng-click="cancel()"/>
+                    <input type="button" value="Cancel" class="btn btn-primary" ng-click="goToTrucksPage()"/>
                 </div>
 
             </div>
