--- a/client/views/partials/login.html
+++ b/client/views/partials/login.html
@@ -1,31 +1,44 @@
-<div ng-controller="LoginCtrl">
-    <form class="login-form" ng-submit="logIn()">
-        <h2 class="login-heading">Easy Gaadi</h2>
-        <div class="form-group">
-            <label for="accountId">Account Name</label>
-            <input ng-model="loginParams.accountName" type="text" class="form-control" id="accountId"
-                   placeholder="Account Name">
+<div ng-controller="LoginCtrl" class="clo-xs-4 col-xs-push-4">
+    <form class="login-form mt-10" ng-submit="logIn()">
+        <h2 class="login-heading">Login</h2>
+        <div class="mt-10">
+            <div class="form-group col-xs-12">
+                <label for="accountId" class="col-sm-4 col-xs-12 pall-zero">Account Name</label>
+                <div class="col-sm-8 col-xs-12">
+                    <input ng-model="loginParams.accountName" type="text" class="form-control" id="accountId"
+                           placeholder="Account Name">
+                </div>
+            </div>
+
+            <div class="form-group col-xs-12">
+                <label for="userName" class="col-sm-4 col-xs-12 pall-zero">User Name</label>
+                <div class="col-sm-8 col-xs-12">
+                    <input ng-model="loginParams.userName" type="text" class="form-control" id="userName"
+                           placeholder="User name">
+                </div>
+            </div>
+
+            <div class="form-group col-xs-12">
+                <label for="password" class="col-sm-4 col-xs-12 pall-zero">Password</label>
+                <div class="col-sm-8 col-xs-12">
+                    <input ng-model="loginParams.password" type="password" class="form-control" id="password"
+                           placeholder="Password">
+                </div>
+            </div>
         </div>
+        <div class="clearfix"></div>
 
-        <div class="form-group">
-            <label for="userName">User Name</label>
-            <input ng-model="loginParams.userName" type="text" class="form-control" id="userName"
-                   placeholder="User name">
-        </div>
-
-        <div class="form-group">
-            <label for="password">Password</label>
-            <input ng-model="loginParams.password" type="password" class="form-control" id="password"
-                   placeholder="Password">
-        </div>
-
-
-        <div>
+        <div class="col-xs-10 col-xs-push-1">
             <div class="alert alert-danger" role="alert" ng-show="loginParams.error">
                 <strong>{{loginParams.error}}</strong>
             </div>
         </div>
+        <div class="clearfix"></div>
+        <div class="col-xs-4 col-xs-push-4">
+            <button type="submit" class="btn btn-primary" ng-click="login()">Submit</button>
+        </div>
 
-        <button type="submit" class="btn btn-primary" ng-click="login()">Submit</button>
+        <div class="clearfix"></div>
     </form>
+
 </div>
