Allpages page titles are done

--- a/client/views/partials/Maintenance/maintenance.html
+++ b/client/views/partials/Maintenance/maintenance.html
@@ -5,7 +5,7 @@
             <left-navigation></left-navigation>
         </div>
         <div class="main-right col-xs-9" ng-controller="MaintenanceCtrl">
-            <h3>Maintenance Cost</h3>
+            <h3>Maintenance</h3>
             <button class="btn  btn-blue pull-right" ng-click="goToEditMaintenancePage()">Add Maintenance</button>
 
             <div class="margin-top-40">
