--- a/client/views/partials/trucks-list.html
+++ b/client/views/partials/trucks-list.html
@@ -6,7 +6,7 @@
         </div>
         <div class="main-right col-xs-9">
 
-            <h3>Trucks List</h3>
+            <h3>Trucks</h3>
             <button class="btn btn-blue  pull-right" ng-click="goToEditTruckPage()">Add Truck</button>
 
             <div class="margin-top-40">
