--- a/client/views/partials/accounts/edit-account.html
+++ b/client/views/partials/accounts/edit-account.html
@@ -6,7 +6,7 @@
         </div>
         <div class="main-right col-xs-9">
             <div class="col-xs-12 account-edit">
-                <h2 class="login-heading">Add Account</h2>
+                <h2 class="login-heading">{{pagetitle}}</h2>
                 <form ng-submit="addOrUpdateAccount()" class="mt-10">
                     <div class="col-sm-6 col-xs-12">
                         <div class="form-group col-xs-12">
