--- a/client/views/partials/roles/roles-edit.html
+++ b/client/views/partials/roles/roles-edit.html
@@ -5,32 +5,35 @@
             <left-navigation></left-navigation>
         </div>
         <div class="main-right col-xs-9">
-            <div class="col-xs-6 account-edit">
-                <h2 class="login-heading">Add Role</h2>
+            <div class="col-xs-12 account-edit">
+                <h2 class="login-heading">{{pagetitle}}</h2>
                 <form class="mt-10">
-                    <div class="form-group col-xs-12">
-                        <label for="name" class="col-sm-4 col-xs-12 pall-zero">Role Name</label>
-                        <div class="col-xs-12 col-sm-8">
-                            <input ng-model="rolesDetails.roleName" type="text" class="form-control" id="name"
-                                   placeholder="Role Name"/>
+                    <div class="col-xs-12 col-sm-6">
+                        <div class="form-group col-xs-12">
+                            <label for="name" class="col-sm-4 col-xs-12 pall-zero">Role Name</label>
+                            <div class="col-xs-12 col-sm-8">
+                                <input ng-model="rolesDetails.roleName" type="text" class="form-control" id="name"
+                                       placeholder="Role Name"/>
+                            </div>
                         </div>
                     </div>
-                    <div class="clearfix"></div>
-                    <div>
-                        <div>
-                            <div class="alert alert-danger" role="alert" ng-show="rolesDetails.error">
-                                <strong>{{rolesDetails.error}}</strong>
-                            </div>
+                        <div class="clearfix"></div>
+                        <div class="col-xs-4 col-xs-push-4">
+                            <div>
+                                <div class="alert alert-danger" role="alert" ng-show="rolesDetails.error">
+                                    <strong>{{rolesDetails.error}}</strong>
+                                </div>
 
-                            <div class="alert alert-success" role="alert" ng-show="rolesDetails.success">
-                                <strong>{{rolesDetails.success}}</strong>
+                                <div class="alert alert-success" role="alert" ng-show="rolesDetails.success">
+                                    <strong>{{rolesDetails.success}}</strong>
+                                </div>
+                            </div>
+                            <div class="margin-top-20">
+                                <button type="submit" class="btn btn-primary" ng-click="AddorUpdateRole()">Submit
+                                </button>
+                                <button type="submit" class="btn btn-primary" ng-click="goToRolesPage()">Cancel</button>
                             </div>
                         </div>
-                        <div class="col-xs-6 col-xs-push-3">
-                            <button type="submit" class="btn btn-primary" ng-click="AddorUpdateRole()">Submit</button>
-                            <button type="submit" class="btn btn-primary" ng-click="goToRolesPage()">Cancel</button>
-                        </div>
-                    </div>
                 </form>
             </div>
 
