--- a/client/views/partials/trip-lane-edit.html
+++ b/client/views/partials/trip-lane-edit.html
@@ -5,9 +5,10 @@
             <left-navigation></left-navigation>
         </div>
         <div class="main-right col-xs-9">
-            <div class="col-xs-6 account-edit">
-                <h2 class="login-heading">Add Trip Lane</h2>
+            <div class="col-xs-12 account-edit">
+                <h2 class="login-heading">{{pagetitle}}</h2>
                 <form class="mt-10">
+                    <div class="col-xs-12 col-sm-6">
                     <div class="form-group col-xs-12">
                         <label for="name" class="col-sm-4 col-xs-12 pall-zero">Name</label>
                         <div class="col-sm-8 col-xs-12">
@@ -22,6 +23,8 @@
                                    placeholder="From">
                         </div>
                     </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-6">
                     <div class="form-group col-xs-12">
                         <label class="col-sm-4 col-xs-12 pall-zero">To</label>
                         <div class="col-sm-8 col-xs-12">
@@ -38,8 +41,9 @@
                                    placeholder="Estimated Distance">
                         </div>
                     </div>
+                    </div>
 
-                    <div>
+                    <div class="col-xs-4 col-xs-push-4">
                         <div>
                             <div class="alert alert-danger" role="alert" ng-show="tripLane.error">
                                 <strong>{{tripLane.error}}</strong>
@@ -49,10 +53,11 @@
                                 <strong>{{tripLane.success}}</strong>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-xs-6 col-xs-push-3">
+
+                    <div class="margin-top-20">
                         <button type="submit" class="btn btn-primary" ng-click="addOrUpdateTripLane()">Submit</button>
                         <input type="button" value="Cancel" class="btn btn-primary" ng-click="cancel()"/>
+                    </div>
                     </div>
                 </form>
             </div>
