--- a/client/views/partials/trips-edit.html
+++ b/client/views/partials/trips-edit.html
@@ -6,7 +6,7 @@
         </div>
         <div class="main-right col-xs-9">
             <div class="col-xs-12 account-edit">
-                <h2 class="login-heading text-center">Add Trip</h2>
+                <h2 class="login-heading">{{pagetitle}}</h2>
 
                 <form class="mt-10">
                     <div class="col-sm-6 col-xs-12">
