--- a/client/views/partials/users/usersEdit.html
+++ b/client/views/partials/users/usersEdit.html
@@ -6,7 +6,7 @@
         </div>
         <div class="main-right col-xs-9">
             <div class="col-xs-12 account-edit">
-                <h2 class="login-heading">Add User</h2>
+                <h2 class="login-heading">{{pagetitle}}</h2>
 
                 <form class="mt-10">
                     <div class="col-xs-12 col-sm-6">
@@ -31,15 +31,15 @@
                                    placeholder="Email">
                         </div>
                     </div>
-                    </div>
-                    <div class="col-xs-12 col-sm-6">
-                    <div class="form-group col-xs-12">
-                        <label for="userName" class="col-sm-4 col-xs-12 pall-zero">User Name</label>
-                        <div class="col-sm-8 col-xs-12">
-                            <input ng-model="userDetails.userName" type="text" class="form-control" id="userName"
-                                   placeholder="User Name">
+                        <div class="form-group col-xs-12">
+                            <label for="userName" class="col-sm-4 col-xs-12 pall-zero">User Name</label>
+                            <div class="col-sm-8 col-xs-12">
+                                <input ng-model="userDetails.userName" type="text" class="form-control" id="userName"
+                                       placeholder="User Name">
+                            </div>
                         </div>
                     </div>
+                    <div class="col-xs-12 col-sm-6">
 
                     <div class="form-group col-xs-12">
                         <label for="role" class="col-sm-4 col-xs-12 pall-zero">Role</label>
@@ -57,13 +57,13 @@
                                    placeholder="password">
                         </div>
                     </div>
-                    <div class="form-group col-xs-12">
-                    <div class="checkbox">
-                        <label>
-                            <input type="checkbox" ng-model="userDetails.status"> User Status
-                        </label>
-                    </div>
-                    </div>
+                        <div class="form-group col-xs-12">
+                            <div class="checkbox">
+                                <label>
+                                    <input type="checkbox" ng-model="userDetails.status"> User Status
+                                </label>
+                            </div>
+                        </div>
 
                     <div>
                     </div>
