--- a/client/views/partials/drivers/edit-driver.html
+++ b/client/views/partials/drivers/edit-driver.html
@@ -22,7 +22,7 @@
                         <div class="form-group col-xs-12">
                             <label for="mobile" class="col-xs-12 col-sm-4 pall-zero">Mobile Number</label>
                             <div class="col-sm-8 col-xs-12">
-                                <input ng-model="driver.mobile" type="text" class="form-control" id="mobile"
+                                <input ng-model="driver.mobile" type="number" class="form-control" id="mobile"
                                        placeholder="Mobile Number">
                             </div>
                         </div>
@@ -48,7 +48,7 @@
                         <div class="form-group col-xs-12">
                             <label for="salary" class="col-xs-12 col-sm-4 pall-zero">Salary</label>
                             <div class="col-xs-12 col-sm-8">
-                                <input ng-model="driver.salary" type="text" class="form-control" id="salary"
+                                <input ng-model="driver.salary" type="number" class="form-control" id="salary"
                                        placeholder="Salary">
                             </div>
                         </div>
