driversname and contact number

--- a/client/views/partials/trucks-edit.html
+++ b/client/views/partials/trucks-edit.html
@@ -32,6 +32,13 @@
                         </div>
                     </div>
                     <div class="form-group col-xs-12">
+                        <label class="col-sm-4 pall-zero">Modal and Year :</label>
+                        <div class="col-sm-8 col-xs-12">
+                            <input type="text" class="form-control" ng-model="truck.modelAndYear"
+                                   placeholder="Modal and Year"/>
+                        </div>
+                    </div>
+                    <div class="form-group col-xs-12">
                         <label class="col-sm-4 pall-zero">Fitness Expiry :</label>
                         <div class="col-sm-8 col-xs-12">
                             <date-picker id="fitnessExpiry" ng-model="truck.fitnessExpiry"></date-picker>
