Validation done in all modules

--- a/client/views/partials/trip-lane-edit.html
+++ b/client/views/partials/trip-lane-edit.html
@@ -45,12 +45,12 @@
 
                     <div class="col-xs-4 col-xs-push-4">
                         <div>
-                            <div class="alert alert-danger" role="alert" ng-show="tripLane.error">
-                                <strong>{{tripLane.error}}</strong>
-                            </div>
+                            <div class="alert alert-danger" role="alert" ng-show="tripLane.error.length">
+                                    <ul><li ng-repeat="error in tripLane.error">{{error}}</li></ul>
+                                    </div>
 
-                            <div class="alert alert-success" role="alert" ng-show="tripLane.success">
-                                <strong>{{tripLane.success}}</strong>
+                            <div class="alert alert-success" role="alert" ng-show="tripLane.success.length">
+                                <ul><li ng-repeat="success in tripLane.success">{{success}}</li></ul>
                             </div>
                         </div>
 
