--- a/client/views/partials/trips-edit.html
+++ b/client/views/partials/trips-edit.html
@@ -94,12 +94,12 @@
                     <div class="clearfix"></div>
                     <div class="col-xs-4 col-xs-push-4 margin-top-20">
                         <div>
-                            <div class="alert alert-danger" role="alert" ng-show="trip.error">
-                                <strong>{{trip.error}}</strong>
+                            <div class="alert alert-danger" role="alert" ng-show="trip.error.length">
+                                <ul><li  ng-repeat="error in trip.error">{{error}}</li></ul>
                             </div>
 
-                            <div class="alert alert-success" role="alert" ng-show="trip.success">
-                                <strong>{{trip.success}}</strong>
+                            <div class="alert alert-success" role="alert" ng-show="trip.success.length">
+                                <ul><li  ng-repeat="success in trip.error">{{success}}</li></ul>
                             </div>
                         </div>
                         <button type="submit" class="btn btn-primary" ng-click="addOrUpdateTrip()">Submit</button>
