--- a/client/views/partials/accounts/accountsList.html
+++ b/client/views/partials/accounts/accountsList.html
@@ -15,7 +15,7 @@
 
 
             <ul uib-pagination total-items="totalItems" ng-model="pageNumber" max-size="maxSize" class="pagination-sm pull-right"
-                boundary-link-numbers="true" rotate="false" ng-change="getAccountsData()"></ul>
+                boundary-link-numbers="true" rotate="false" ng-change="getAccountsData()" ng-show="totalItems > 10"></ul>
         </div>
     </div>
 </div>
