--- a/client/views/partials/drivers/driversList.html
+++ b/client/views/partials/drivers/driversList.html
@@ -16,7 +16,7 @@
                 <div class="grid" ui-grid="driverGridOptions"></div>
             </div>
             <ul uib-pagination total-items="totalItems" ng-model="pageNumber" max-size="maxSize" class="pagination-sm pull-right"
-                boundary-link-numbers="true" rotate="false" ng-change="getDriversData()"></ul>
+                boundary-link-numbers="true" rotate="false" ng-change="getDriversData()" ng-show="totalItems > 10"></ul>
         </div>
     </div>
 </div>
