--- a/client/views/partials/party-list.html
+++ b/client/views/partials/party-list.html
@@ -13,7 +13,7 @@
             </div>
 
             <ul uib-pagination total-items="totalItems" ng-model="pageNumber" max-size="maxSize" class="pagination-sm pull-right"
-                boundary-link-numbers="true" rotate="false" ng-change="getParties()"></ul>
+                boundary-link-numbers="true" rotate="false" ng-change="getParties()" ng-show="totalItems > 10"></ul>
         </div>
     </div>
 </div>
