--- a/client/views/partials/roles/roles.html
+++ b/client/views/partials/roles/roles.html
@@ -13,7 +13,7 @@
             </div>
 
             <ul uib-pagination total-items="totalItems" ng-model="pageNumber" max-size="maxSize" class="pagination-sm pull-right"
-            boundary-link-numbers="true" rotate="false" ng-change="getRoles()"></ul>
+            boundary-link-numbers="true" rotate="false" ng-change="getRoles()" ng-show="totalItems > 10"></ul>
         </div>
     </div>
 </div>
