--- a/client/views/partials/trips.html
+++ b/client/views/partials/trips.html
@@ -14,8 +14,7 @@
             </div>
 
             <ul uib-pagination total-items="totalItems" ng-model="pageNumber" max-size="maxSize" class="pagination-sm pull-right    "
-                boundary-link-numbers="true" rotate="false" ng-change="getTripsData()"></ul>
-
+                boundary-link-numbers="true" rotate="false" ng-change="getTripsData()" ng-show="totalItems > 10"></ul>
 
         </div>
     </div>
