--- a/client/views/partials/trucks-list.html
+++ b/client/views/partials/trucks-list.html
@@ -15,7 +15,7 @@
 
 
             <ul uib-pagination total-items="totalItems" ng-model="pageNumber" max-size="maxSize" class="pagination-sm pull-right"
-                boundary-link-numbers="true" rotate="false" ng-change="getTrucksData()"></ul>
+                boundary-link-numbers="true" rotate="false" ng-change="getTrucksData()" ng-show="totalItems > 10" ></ul>
         </div>
     </div>
 </div>
