cancel button UI changes

--- a/client/views/partials/Maintenance/maintenanceEdit.html
+++ b/client/views/partials/Maintenance/maintenanceEdit.html
@@ -61,7 +61,7 @@
                         <div class="margin-top-20">
                             <button type="submit" class="btn btn-primary" ng-click="AddorUpdateMaintenance()">Submit
                             </button>
-                            <button type="submit" class="btn btn-primary" ng-click="goToMaintenancePage()">Cancel
+                            <button type="submit" class="btn btn-red" ng-click="cancel()">Cancel
                             </button>
                         </div>
                     </div>
