--- a/client/views/partials/trips-edit.html
+++ b/client/views/partials/trips-edit.html
@@ -103,7 +103,7 @@
                             </div>
                         </div>
                         <button type="submit" class="btn btn-primary" ng-click="addOrUpdateTrip()">Submit</button>
-                        <input type="button" value="Cancel" class="btn btn-primary" ng-click="cancel()"/>
+                        <input type="button" value="Cancel" class="btn btn-red" ng-click="cancel()"/>
                     </div>
             </div>
             </form>
