--- a/client/views/partials/trucks-edit.html
+++ b/client/views/partials/trucks-edit.html
@@ -88,7 +88,7 @@
                         </ul>
                     </div>
                     <input type="button" value="Submit" class="btn btn-primary" ng-click="addOrUpdateTruck()"/>
-                    <input type="button" value="Cancel" class="btn btn-primary" ng-click="goToTrucksPage()"/>
+                    <input type="button" value="Cancel" class="btn btn-red" ng-click="goToTrucksPage()"/>
                 </div>
 
             </div>
