--- a/client/views/index.html
+++ b/client/views/index.html
@@ -67,7 +67,7 @@
 <script src="components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
 <script src="components/underscore/underscore-min.js"></script>
 <script src="components/angular-ui-grid/ui-grid.min.js"></script>
-<script src="components/angular-ui-notification/dist/angular-ui-notification.min.js"></script>
+<script src="components/angular-ui-notification/dist/angular-ui-notification.js"></script>
 
 <!--app-->
 <script src="js/app.js"></script>
