--- a/client/views/partials/accounts/edit-account.html
+++ b/client/views/partials/accounts/edit-account.html
@@ -52,33 +52,38 @@
                             </div>
                         </div>
 
-                    <div class="form-group col-xs-12">
-                    <div class="checkbox">
-                        <label><input type="checkbox" ng-model="account.isActive">Account status</label>
-                    </div>
-                    </div>
+                        <div class="form-group col-xs-12">
+                            <div class="">
+                                <label class="col-sm-4 pall-zero">Account status</label>
+                                <div class="col-sm-8">
+                                    <input type="checkbox" ng-model="account.isActive">
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="clearfix"></div>
                     <div class="col-xs-4 col-xs-push-4">
 
-                    <div>
-                        <div class="alert alert-danger" role="alert" ng-show="account.errors.length">
-                            <ul>
-                                <li ng-repeat="error in account.errors">{{error}}</li>
-                            </ul>
-                        </div>
+                        <div>
+                            <div class="alert alert-danger" role="alert" ng-show="account.errors.length">
+                                <ul>
+                                    <li ng-repeat="error in account.errors">{{error}}</li>
+                                </ul>
+                            </div>
 
-                        <div class="alert alert-success" role="alert" ng-show="account.success.length">
-                            <ul>
-                                <li ng-repeat="success in account.success">{{success}}</li>
-                            </ul>
+                            <div class="alert alert-success" role="alert" ng-show="account.success.length">
+                                <ul>
+                                    <li ng-repeat="success in account.success">{{success}}</li>
+                                </ul>
+                            </div>
+
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                            <input type="button" value="Cancel" class="btn btn-red" ng-click="cancel()"/>
                         </div>
                     </div>
 
-                        <button type="submit" class="btn btn-primary">Submit</button>
-                        <input type="button" value="Cancel" class="btn btn-primary" ng-click="cancel()"/>
-                    </div>
                 </form>
+
             </div>
         </div>
     </div>
