--- a/client/views/partials/drivers/edit-driver.html
+++ b/client/views/partials/drivers/edit-driver.html
@@ -62,11 +62,9 @@
                             </div>
                         </div>
                         <div class="form-group col-xs-12">
-                            <div class="checkbox">
-                                <label>
-                                    <input type="checkbox" ng-model="driver.status"> Driver Status
-                                </label>
-                            </div>
+                            <label class="col-sm-4 pall-zero">Driver Status</label>
+                            <div class="col-sm-8"><input type="checkbox" ng-model="driver.status"></div>
+
                         </div>
 
                     </div>
@@ -83,7 +81,7 @@
                             </ul>
                         </div>
                         <button type="submit" class="btn btn-primary" ng-click="addOrSaveDriver()">Submit</button>
-                        <input type="button" value="Cancel" class="btn btn-primary" ng-click="cancel()"/>
+                        <input type="button" value="Cancel" class="btn btn-red" ng-click="cancel()"/>
                     </div>
                 </form>
             </div>
