--- a/client/views/partials/edit-party.html
+++ b/client/views/partials/edit-party.html
@@ -65,7 +65,7 @@
                             </ul>
                         </div>
                         <input type="button" value="Submit" class="btn btn-primary" ng-click="addOrUpdateParty()"/>
-                        <input type="button" value="Cancel" class="btn btn-primary" ng-click="cancel()"/>
+                        <input type="button" value="Cancel" class="btn btn-red" ng-click="cancel()"/>
                     </div>
                 </form>
             </div>
