--- a/client/views/partials/trip-lane-edit.html
+++ b/client/views/partials/trip-lane-edit.html
@@ -56,7 +56,7 @@
 
                     <div class="margin-top-20">
                         <button type="submit" class="btn btn-primary" ng-click="addOrUpdateTripLane()">Submit</button>
-                        <input type="button" value="Cancel" class="btn btn-primary" ng-click="cancel()"/>
+                        <input type="button" value="Cancel" class="btn btn-red" ng-click="cancel()"/>
                     </div>
                     </div>
                 </form>
