--- a/client/views/partials/users/usersEdit.html
+++ b/client/views/partials/users/usersEdit.html
@@ -58,15 +58,11 @@
                         </div>
                     </div>
                         <div class="form-group col-xs-12">
-                            <div class="checkbox">
-                                <label>
-                                    <input type="checkbox" ng-model="userDetails.status"> User Status
-                                </label>
-                            </div>
+                            <label class="col-sm-4 pall-zero">User Status</label>
+                            <div class="col-sm-8"><input type="checkbox" ng-model="userDetails.status"></div>
+
                         </div>
 
-                    <div>
-                    </div>
                     </div>
                         <div class="clearfix"></div>
                     <div class="col-xs-4 col-xs-push-4">
@@ -80,7 +76,7 @@
 
                         <div class="margin-top-20">
                             <button type="submit" class="btn btn-primary" ng-click="AddorUpdateUSer()">Submit</button>
-                            <button type="submit" class="btn btn-primary" ng-click="goToUsersPage()">Cancel</button>
+                            <button type="submit" class="btn btn-red" ng-click="goToUsersPage()">Cancel</button>
                         </div>
                     </div>
                 </form>
