--- a/client/views/partials/trips-edit.html
+++ b/client/views/partials/trips-edit.html
@@ -23,6 +23,10 @@
                                 <input ng-model="trip.registrationNo" type="text" class="form-control"
                                        id="registrationNo"
                                        placeholder="Registration Number">
+                                <!--<select ng-model="driver.truckId"-->
+                                        <!--ng-options="truck._id as truck.registrationNo for truck in trucks" type="text"-->
+                                        <!--class="form-control" id="truckId">-->
+                                <!--</select>-->
                             </div>
                         </div>
                         <div class="form-group col-xs-12">
