--- a/client/views/partials/trips.html
+++ b/client/views/partials/trips.html
@@ -13,9 +13,8 @@
                 <div class="grid" ui-grid="tripGridOptions"></div>
             </div>
 
-            <ul uib-pagination total-items="totalItems" ng-model="pageNumber" max-size="maxSize" class="pagination-sm pull-right    "
-                boundary-link-numbers="true" rotate="false" ng-change="getTripsData()" ng-show="totalItems > 10"></ul>
-
+            <ul uib-pagination total-items="totalItems" ng-model="pageNumber" max-size="maxSize" class="pagination-sm pull-right"
+                boundary-link-numbers="true" rotate="false" ng-change="getTripsData()"></ul>
         </div>
     </div>
 </div>
