--- a/client/views/partials/trips-edit.html
+++ b/client/views/partials/trips-edit.html
@@ -20,13 +20,13 @@
                         <div class="form-group col-xs-12">
                             <label for="registrationNo" class="col-sm-4 col-xs-12 pall-zero">Registration No</label>
                             <div class="col-xs-12 col-sm-8">
-                                <input ng-model="trip.registrationNo" type="text" class="form-control"
-                                       id="registrationNo"
-                                       placeholder="Registration Number">
-                                <!--<select ng-model="driver.truckId"-->
-                                        <!--ng-options="truck._id as truck.registrationNo for truck in trucks" type="text"-->
-                                        <!--class="form-control" id="truckId">-->
-                                <!--</select>-->
+                                <!--<input ng-model="trip.registrationNo" type="text" class="form-control"-->
+                                       <!--id="registrationNo"-->
+                                       <!--placeholder="Registration Number">-->
+                                <select ng-model="trip.registrationNo"
+                                        ng-options="truck._id as truck.registrationNo for truck in trucks" type="text"
+                                        class="form-control" id="registrationNo">
+                                </select>
                             </div>
                         </div>
                         <div class="form-group col-xs-12">
